# tree-sitter-hare

./: CHANGELOG.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
bindings/c/: tree-sitter-hare.h  tree-sitter-hare.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_hare/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: hare.h
queries/: highlights.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c
